# SPDX-FileCopyrightText: @ 2023 Matt Gleason <mjgleason@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "troposphere"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
